# testing

./: CMakeLists.txt
include/: i2cCom.h
src/: CMakeLists.txt  i2cCom.cpp  main.cpp
