cmake_minimum_required(VERSION 2.8)

PROJECT(testing)

## Default install prefix : /usr
SET(CMAKE_INSTALL_PREFIX /usr)
option(CMAKE_INSTALL_PREFIX "CMAKE_INSTALL_PREFIX" ${CMAKE_INSTALL_PREFIX})

## CMAKE_CXX_FLAGS
SET(CMAKE_CXX_FLAGS "-Wno-write-strings")

## Default build type : REALEASE
IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF (CMAKE_BUILD_TYPE STREQUAL "")


INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

SET(EXECUTABLE_OUTPUT_PATH "${testing_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${testing_BINARY_DIR}/lib")


#ADD_SUBDIRECTORY(include)
INCLUDE_DIRECTORIES( include )
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(data)
	
